Add brief algorithm description

--- a/lab2-local_normalization/vizualization.ipynb
+++ b/lab2-local_normalization/vizualization.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_image = array(rgb2gray(mpimg.imread(\"text.jpeg\")), dtype=float64)"
+    "input_image = array(rgb2gray(mpimg.imread(\"images/text.jpeg\")), dtype=float64)"
    ]
   },
   {
