Add image to images folder

--- a/lab3-opening_closing/visualization.ipynb
+++ b/lab3-opening_closing/visualization.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_image = array(rgb2gray(mpimg.imread(\"circles.png\")))"
+    "input_image = array(rgb2gray(mpimg.imread(\"images/circles.png\")))"
    ]
   },
   {
