Use numpy.clip for resulting images

--- a/lab6-linear_filtration/src/vizualization.ipynb
+++ b/lab6-linear_filtration/src/vizualization.ipynb
@@ -13,6 +13,7 @@
     "from numpy import (\n",
     "    full,\n",
     "    array,\n",
+    "    clip,\n",
     ")\n",
     "from ipywidgets import (\n",
     "    interact,\n",
@@ -120,7 +121,7 @@
     "\n",
     "\n",
     "    ax_filter.imshow(filter_matrix, cmap=\"gray\")\n",
-    "    ax_result.imshow(resulting_image, cmap=\"gray\")\n",
+    "    ax_result.imshow(clip(resulting_image, 0, 255), cmap=\"gray\")\n",
     "\n",
     "    fig.canvas.draw()\n",
     "    display(fig)"
